src/test/deca/context/valid/ContextAvecObjet/DeclClass/classeA.deca
// Description:
//    Programme minimaliste de déclaration d'une classe sans extends, sans champ, sans méthode, sans main.
//
// Resultats:
//    ok
//

class A {}
